--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "odoo-product_weight_uom"]
-	path = odoo-product_weight_uom
+	path = product_weight_uom
 	url = https://github.com/pafnow/odoo-product_weight_uom
